--- a/report/main.tex
+++ b/report/main.tex
@@ -6,7 +6,7 @@
 \usepackage{outlines}
 \usepackage{todonotes}
 \usepackage{enumitem}
-\usepackage{url}
+\usepackage{hyperref}
 \setlist{nolistsep}
 \linespread{1.2}
 \usepackage[a4paper, lmargin=0.1666\paperwidth, rmargin=0.1666\paperwidth, tmargin=0.1111\paperheight, bmargin=0.1111\paperheight]{geometry}
@@ -15,11 +15,15 @@
 \author{ Casper Wassar Skourup - caws@itu.dk\\ Lukas Hjelmstrand - luhj@itu.dk \\ Mads Piriwe Risom Andersen - mpia@itu.dk \\ Niclas Søgaard Hjortkjær - nihj@itu.dk \\ Villum Nils Robert Sonne - vson@itu.dk }
 \date{24/05-2023 \\ \vspace{4cm}
 \texttt{DevOps, Software Evolution and Software Maintenance, BSc} \\\texttt{Course code: BSDSESM1KU}
-\\ \vspace*{\fill} Github link: \url{https://github.com/NiclasHjortkjaer/itu-minitwit} \\ Webite link: \url{http://jasonderulo.live} \\ Simulator link: \url{http://jasonderulo.live/simulator}}
+\\ \vspace*{\fill} Github link: \url{https://github.com/NiclasHjortkjaer/itu-minitwit}}
 
 \begin{document}
 
 \maketitle
+
+\newpage
+
+\tableofcontents
 
 \input{1_system_perspective}
 \input{2_process_perspective}
